--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,4 @@ requests
 transformers
 torch
 accelerate
-streamlit>=1.28.0
-huggingface-hub>=0.19.0
-requests>=2.31.0
-python-dotenv>=1.0.
+bitsandbytes
