--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor = "#4B9CD3"
 backgroundColor = "#FFD580"
-secondaryBackgroundColor = "#F0F2F6" #sidebar
+secondaryBackgroundColor = "#C04000" #sidebar
 textColor = "#000000"
 font = "sans serif"
