--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor = "#4B9CD3"
+primaryColor = "##FF5F1F"
 backgroundColor = "#FFE5B4"
 secondaryBackgroundColor = "#FFC000" #sidebar
 textColor = "#000000"
